--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -156,11 +156,11 @@
         "sentInfo": "確認リンクを含むメールを入力されたメールアドレスに送信しました。メールをご確認ください。",
         "cooperation": "不正・悪意のあるアカウント防止へのご協力に感謝します。",
         "notReceived": "確認メールが届かない場合は、入力したメールアドレスを再度ご確認のうえ（{link}）、確認メールを再送してください。",
-        "spamSettings": "メールソフトやプロバイダの迷惑メール設定が myfans ドメインからの受信を許可していることを確認してください。",
-        "fromAddress": "確認メールは <strong>noreply@myfans.jp</strong> から送信されます。",
+        "spamSettings": "メールソフトやプロバイダの迷惑メール設定が onlyu ドメインからの受信を許可していることを確認してください。",
+        "fromAddress": "確認メールは <strong>noreply@onlyu.jp</strong> から送信されます。",
         "moreInfo": "その他の問題についての情報は {link} をご確認ください。",
         "backToCreation": "アカウント作成に戻る",
-        "brand": "myfans"
+        "brand": "onlyu"
     },
     "creatorPage": {
         "followers": "フォロワー",
@@ -321,7 +321,7 @@
         "sentInfo": "ご入力いただいたメールアドレスに確認リンクを記載したメールを送信しました。ご確認ください。",
         "cooperation": "不正なアカウントや悪質なアカウントの防止にご協力いただきありがとうございます。",
         "notReceived": "確認メールが届かない場合は、ご入力いただいたメールアドレス（{link}を参照）をご確認の上、確認メールを再送信してください。",
-        "spamSettings": "お使いのメールソフトまたはメールプロバイダーのスパム設定で、myfansドメインからの受信が許可されていることをご確認ください。"
+        "spamSettings": "お使いのメールソフトまたはメールプロバイダーのスパム設定で、onlyuドメインからの受信が許可されていることをご確認ください。"
     },
     "notificationPage": {
         "title": "通知",
