--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -1,6 +1,6 @@
 {
     "languageSettings": "言語設定 / 言語",
-    "notification1": "クレジットカード決済使用時に遷移する決済システム画面について",
+    "notification1": "クレジットカード決済使用時に遷移する決済システム画面について。",
     "notification2": "利用規約改定のお知らせ",
     "termsOfUse": {
         "title": "利用規約",
