--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -107,7 +107,7 @@
             "schedulePost": "投稿を予約する",
             "publicationPeriod": "公開期間",
             "addPlan": "プランを追加",
-            "singlePostSales": "単発投稿販売"
+            "singlePostSales": "単品販売"
         },
         "agreements": {
             "copyright": "投稿内容が著作権侵害や猥褻物の公開に該当しないことを確認しました。",
@@ -122,13 +122,13 @@
             "thankYou": "当プラットフォームの安全性とセキュリティを確保するためのご協力に感謝します。",
             "lineone": "公開するコンテンツが当社の利用規約に準拠していることをご確認ください。",
             "lineonetwo": "利用規約。",
-            "linetwo": "他人のコンテンツをアップロードすることは著作権侵害であり、最長10年の懲役または1,000万円以下の罰金が科せられます。",
+            "linetwo": "他人のコンテンツを同意なくアップロードすることは著作権侵害であり、最長10年の懲役または1,000万円以下の罰金が科せられます。",
             "linethree": "モザイク処理されていないコンテンツはわいせつ物の頒布に該当し、刑事犯罪となるため、公開しないでください。",
-            "linefour": "性器や性交画像を検閲していない場合、すべての投稿が削除される場合があります。",
+            "linefour": "性器や性交画像をアップロードした場合、すべての投稿が削除される場合があります。",
             "buttonclick": "投稿の公開に関するヘルプはこちらをクリックしてください。",
-            "success": "成功しました！",
-            "linepost": "投稿は正常に公開され、フォロワーが閲覧できるようになりました。",
-            "continuehome": "ホームへ進む",
+            "success": "投稿完了しました！",
+            "linepost": "投稿は正常に公開され、閲覧可能状態になりました。",
+            "continuehome": "ホームへ戻る",
             "viewprofile": "プロフィールを見る"
         },
         "placeholder": {
