--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -41,7 +41,7 @@
         },
         "postsOperations": {
             "title": "投稿/運営/売上",
-            "description": "クリエイターとして登録すると、コンテンツの投稿や管理、売上の追跡ができます。",
+            "description": "クリエイターとして登録すると、コンテンツの投稿や管理、売上の確認ができます。",
             "registerCreator": "クリエイターとして登録"
         },
         "settings": {
@@ -69,7 +69,7 @@
             "logout": "ログアウト",
             "login": "ログイン",
             "X": "Xでサインイン",
-            "forgotps": "パスワードを忘れましたか？",
+            "forgotps": "パスワードをお忘れですか？",
             "dha": "アカウントをお持ちでないですか？",
             "signup": "サインアップ",
             "logging": "ログイン中...",
@@ -264,7 +264,7 @@
     },
     "homePage": {
         "gender": "性別",
-        "welcomeMessage": "FANS HUBへようこそ",
+        "welcomeMessage": "Only Uへようこそ",
         "introText": "お気に入りのクリエイターによる限定コンテンツをご覧ください。登録してフォローし、パーソナライズされた体験をお楽しみください。",
         "getStarted": "始める",
         "learnMore": "詳細はこちら"
@@ -316,8 +316,8 @@
         }
     },
     "emailVerify": {
-        "title": "メールアドレスはまだ確認されていません。",
-        "afterBr": "まだ確認されていません。",
+        "title": "メールアドレスが未確認です。",
+        "afterBr": "確認されていません。",
         "sentInfo": "ご入力いただいたメールアドレスに確認リンクを記載したメールを送信しました。ご確認ください。",
         "cooperation": "不正なアカウントや悪質なアカウントの防止にご協力いただきありがとうございます。",
         "notReceived": "確認メールが届かない場合は、ご入力いただいたメールアドレス（{link}を参照）をご確認の上、確認メールを再送信してください。",
