--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -105,7 +105,298 @@
             "Btb": "美乳",
             "Romance": "ロマンス",
             "Fantasy": "ファンタジー",
-            "Adv": "アドベンチャー"
+            "Adv": "アドベンチャー",
+            "Loli": "ロリ",
+            "Gyaru": "ギャル",
+            "Ojisan": "おじさん",
+            "Shota": "ショタ",
+            "MILF": "ミルフ",
+            "BDSM": "BDSM",
+            "Fetish": "フェチ",
+            "Cosplay": "コスプレ",
+            "School": "学園",
+            "Office": "オフィス",
+            "Nurse": "ナース",
+            "Maid": "メイド",
+            "Teacher": "教師",
+            "Student": "学生",
+            "Housewife": "主婦",
+            "OL": "OL",
+            "Idol": "アイドル",
+            "Model": "モデル",
+            "Actress": "女優",
+            "Dancer": "ダンサー",
+            "Singer": "歌手",
+            "Artist": "アーティスト",
+            "Streamer": "配信者",
+            "YouTuber": "YouTuber",
+            "TikToker": "TikToker",
+            "Instagrammer": "インスタグラマー",
+            "Twitch": "Twitch配信者",
+            "OnlyFans": "OnlyFans",
+            "CamGirl": "カムガール",
+            "Escort": "エスコート",
+            "Massage": "マッサージ",
+            "Bathhouse": "風俗",
+            "Soapland": "ソープランド",
+            "PinkSalon": "ピンクサロン",
+            "Health": "ヘルス",
+            "Delivery": "デリヘル",
+            "Outcall": "アウトコール",
+            "Incall": "インコール",
+            "Hotel": "ホテル",
+            "LoveHotel": "ラブホテル",
+            "Home": "自宅",
+            "Outdoor": "野外",
+            "Public": "公共の場",
+            "Car": "車内",
+            "Beach": "ビーチ",
+            "Mountain": "山",
+            "Forest": "森",
+            "Park": "公園",
+            "School": "学校",
+            "Office": "オフィス",
+            "Hospital": "病院",
+            "Hotel": "ホテル",
+            "Apartment": "アパート",
+            "Mansion": "マンション",
+            "House": "一軒家",
+            "Studio": "スタジオ",
+            "Club": "クラブ",
+            "Bar": "バー",
+            "Restaurant": "レストラン",
+            "Cafe": "カフェ",
+            "Gym": "ジム",
+            "Pool": "プール",
+            "Spa": "スパ",
+            "Onsen": "温泉",
+            "Sauna": "サウナ",
+            "Massage": "マッサージ",
+            "Yoga": "ヨガ",
+            "Pilates": "ピラティス",
+            "Dance": "ダンス",
+            "Music": "音楽",
+            "Art": "アート",
+            "Photography": "写真",
+            "Video": "動画",
+            "Live": "ライブ",
+            "Stream": "配信",
+            "Chat": "チャット",
+            "Voice": "ボイス",
+            "Message": "メッセージ",
+            "Email": "メール",
+            "Phone": "電話",
+            "VideoCall": "ビデオ通話",
+            "AudioCall": "音声通話",
+            "Text": "テキスト",
+            "Image": "画像",
+            "GIF": "GIF",
+            "Sticker": "スタンプ",
+            "Emoji": "絵文字",
+            "Reaction": "リアクション",
+            "Like": "いいね",
+            "Comment": "コメント",
+            "Share": "シェア",
+            "Save": "保存",
+            "Bookmark": "ブックマーク",
+            "Follow": "フォロー",
+            "Subscribe": "購読",
+            "Donate": "寄付",
+            "Tip": "チップ",
+            "Gift": "ギフト",
+            "Coin": "コイン",
+            "Point": "ポイント",
+            "Credit": "クレジット",
+            "Token": "トークン",
+            "VIP": "VIP",
+            "Premium": "プレミアム",
+            "Exclusive": "限定",
+            "Special": "特別",
+            "Rare": "レア",
+            "Limited": "限定版",
+            "New": "新着",
+            "Hot": "人気",
+            "Trending": "トレンド",
+            "Popular": "ポピュラー",
+            "Recommended": "おすすめ",
+            "Featured": "特集",
+            "Editor": "編集者",
+            "Staff": "スタッフ",
+            "Admin": "管理者",
+            "Moderator": "モデレーター",
+            "Creator": "クリエイター",
+            "Producer": "プロデューサー",
+            "Director": "ディレクター",
+            "Writer": "ライター",
+            "Editor": "エディター",
+            "Designer": "デザイナー",
+            "Photographer": "フォトグラファー",
+            "Videographer": "ビデオグラファー",
+            "Sound": "音響",
+            "Lighting": "照明",
+            "Makeup": "メイク",
+            "Hair": "ヘア",
+            "Styling": "スタイリング",
+            "Wardrobe": "衣装",
+            "Props": "小道具",
+            "Set": "セット",
+            "Location": "ロケーション",
+            "Equipment": "機材",
+            "Software": "ソフトウェア",
+            "Hardware": "ハードウェア",
+            "App": "アプリ",
+            "Website": "ウェブサイト",
+            "Platform": "プラットフォーム",
+            "Service": "サービス",
+            "Product": "商品",
+            "Item": "アイテム",
+            "Goods": "グッズ",
+            "Merchandise": "マーチャンダイズ",
+            "Accessory": "アクセサリー",
+            "Jewelry": "ジュエリー",
+            "Watch": "時計",
+            "Bag": "バッグ",
+            "Shoes": "靴",
+            "Clothes": "服",
+            "Underwear": "下着",
+            "Lingerie": "ランジェリー",
+            "Swimwear": "水着",
+            "Costume": "コスチューム",
+            "Uniform": "制服",
+            "Dress": "ドレス",
+            "Skirt": "スカート",
+            "Pants": "パンツ",
+            "Shirt": "シャツ",
+            "Blouse": "ブラウス",
+            "Sweater": "セーター",
+            "Jacket": "ジャケット",
+            "Coat": "コート",
+            "Hat": "帽子",
+            "Glasses": "眼鏡",
+            "Sunglasses": "サングラス",
+            "Mask": "マスク",
+            "Gloves": "手袋",
+            "Socks": "靴下",
+            "Stockings": "ストッキング",
+            "Tights": "タイツ",
+            "Panties": "パンティー",
+            "Bra": "ブラ",
+            "Corset": "コルセット",
+            "Garter": "ガーター",
+            "Belt": "ベルト",
+            "Suspenders": "サスペンダー",
+            "Tie": "ネクタイ",
+            "Bow": "リボン",
+            "Ribbon": "リボン",
+            "Lace": "レース",
+            "Silk": "シルク",
+            "Cotton": "コットン",
+            "Leather": "レザー",
+            "Denim": "デニム",
+            "Wool": "ウール",
+            "Cashmere": "カシミア",
+            "Fur": "ファー",
+            "Feather": "羽",
+            "Pearl": "真珠",
+            "Diamond": "ダイヤモンド",
+            "Gold": "ゴールド",
+            "Silver": "シルバー",
+            "Platinum": "プラチナ",
+            "RoseGold": "ローズゴールド",
+            "WhiteGold": "ホワイトゴールド",
+            "YellowGold": "イエローゴールド",
+            "Pink": "ピンク",
+            "Red": "レッド",
+            "Blue": "ブルー",
+            "Green": "グリーン",
+            "Yellow": "イエロー",
+            "Orange": "オレンジ",
+            "Purple": "パープル",
+            "Black": "ブラック",
+            "White": "ホワイト",
+            "Gray": "グレー",
+            "Brown": "ブラウン",
+            "Beige": "ベージュ",
+            "Navy": "ネイビー",
+            "Maroon": "マルーン",
+            "Burgundy": "バーガンディ",
+            "Crimson": "クリムゾン",
+            "Scarlet": "スカーレット",
+            "Coral": "コーラル",
+            "Salmon": "サーモン",
+            "Peach": "ピーチ",
+            "Cream": "クリーム",
+            "Ivory": "アイボリー",
+            "Champagne": "シャンパン",
+            "Gold": "ゴールド",
+            "Bronze": "ブロンズ",
+            "Copper": "コッパー",
+            "Rose": "ローズ",
+            "Lavender": "ラベンダー",
+            "Mint": "ミント",
+            "Turquoise": "ターコイズ",
+            "Cyan": "シアン",
+            "Magenta": "マゼンタ",
+            "Fuchsia": "フクシア",
+            "Lime": "ライム",
+            "Olive": "オリーブ",
+            "Forest": "フォレスト",
+            "Emerald": "エメラルド",
+            "Jade": "ジェード",
+            "Sapphire": "サファイア",
+            "Ruby": "ルビー",
+            "Amethyst": "アメジスト",
+            "Topaz": "トパーズ",
+            "Opal": "オパール",
+            "Aquamarine": "アクアマリン",
+            "Peridot": "ペリドット",
+            "Garnet": "ガーネット",
+            "Citrine": "シトリン",
+            "Tanzanite": "タンザナイト",
+            "Alexandrite": "アレキサンドライト",
+            "Moonstone": "ムーンストーン",
+            "Sunstone": "サンストーン",
+            "Labradorite": "ラブラドライト",
+            "Lepidolite": "レピドライト",
+            "Kunzite": "クンツァイト",
+            "Morganite": "モルガナイト",
+            "PinkTourmaline": "ピンクトルマリン",
+            "GreenTourmaline": "グリーントルマリン",
+            "BlueTourmaline": "ブルートルマリン",
+            "WatermelonTourmaline": "ウォーターメロントルマリン",
+            "ParaibaTourmaline": "パライバトルマリン",
+            "ChromeTourmaline": "クロムトルマリン",
+            "Indicolite": "インディコライト",
+            "Verdelite": "ベルデライト",
+            "Rubellite": "ルベライト",
+            "Dravite": "ドラバイト",
+            "Uvite": "ウバイト",
+            "Liddicoatite": "リディコアタイト",
+            "Elbaite": "エルバイト",
+            "Schorl": "ショール",
+            "Buergerite": "ビュルゲライト",
+            "Povondraite": "ポボンドライト",
+            "Rossmanite": "ロスマナイト",
+            "Olenite": "オレナイト",
+            "Foitite": "フォイタイト",
+            "Darrellhenryite": "ダレルヘンライト",
+            "Vanadiumdravite": "バナジウムドラバイト",
+            "Chromedravite": "クロムドラバイト",
+            "Feruvite": "フェルバイト",
+            "Uvite": "ウバイト",
+            "Dravite": "ドラバイト",
+            "Schorl": "ショール",
+            "Elbaite": "エルバイト",
+            "Liddicoatite": "リディコアタイト",
+            "Buergerite": "ビュルゲライト",
+            "Povondraite": "ポボンドライト",
+            "Rossmanite": "ロスマナイト",
+            "Olenite": "オレナイト",
+            "Foitite": "フォイタイト",
+            "Darrellhenryite": "ダレルヘンライト",
+            "Vanadiumdravite": "バナジウムドラバイト",
+            "Chromedravite": "クロムドラバイト",
+            "Feruvite": "フェルバイト"
         },
         "tags": "タグ",
         "switches": {
@@ -203,7 +494,9 @@
         "feed": "フィード",
         "ranking": "ランキング",
         "messages": "メッセージ",
-        "account": "アカウント"
+        "account": "アカウント",
+        "create": "投稿",
+        "dashboard": "ダッシュボード"
     },
     "featuredAdmin": {
         "header": "運営Pik UP",
@@ -411,7 +704,7 @@
         "tabs": {
             "administration": "事務局",
             "notices": "お知らせ",
-            "purchases": "売買"
+            "purchases": "購入・売上"
         }
     },
     "register_creator": {
